[package]
name = "libc"
version = "0.2.185"
edition = "2021"
rust-version = "1.65"
description = "Raw FFI bindings to platform libraries like libc."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libc"
build = "build.rs"

[features]
default = ["std"]
std = []
rustc-dep-of-std = ["align", "rustc-std-workspace-core"]
extra_traits = []
const-extern-fn = []
align = []
use_std = ["std"]

[lib]
name = "libc"
path = "src/lib.rs"

[dependencies.rustc-std-workspace-core]
version = "1.0.1"
optional = true
